aplicando animaciones al sitio web

--- a/especialidades.html
+++ b/especialidades.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css estilos/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">   
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
     <title>IMA</title>
 </head>
@@ -31,12 +32,12 @@
         <!--inicio cuerpo principal-->
         <section class="especialidades">
             <ul class="especialidades__lista" >
-                    <li class="l1" ><a href="STAFF.html"> <img src="./assets/especialidades_cardiologia_clinica.png" alt="imagen cardiología" width="120" height="120"> <br> <p>CARDIOLOGÍA</p></a></li>
-                    <li class="l2"><a href="STAFF.html"> <img src="./assets/especialidades_cirugia_general.png" alt="imagen cirugia" width="120" height="120"> <br> <p>CIRUGÍA</p></a></li>
-                    <li class="l3"><a href="STAFF.html"> <img src="./assets/especialidades_endocrinologia.png" alt="imagen endocrinología" width="120" height="120"> <br><p>ENDOCRINOLOGIA</p></a></li>
-                    <li class="l4"><a href="STAFF.html"> <img src="./assets/especialidades_ginecologia.png" alt="imagen ginecología" width="120" height="120"><br><p>GINECOLOGÍA</b></p></a></li>
-                    <li class="l5"><a href="STAFF.html"> <img src="./assets/especialidades_nutricion.png" alt="imagen nutricion" width="120" height="120"> <br><p>NUTRICIÓN</p></a></li>
-                    <li class="l6"><a href="STAFF.html"> <img src="./assets/especialidades_psicologia.png" alt="imagen psicología" width="120" height="120"> <br><p>PSICOLOGÍA</p></a></li>
+                <li class="l1 animate__animated animate__slideInLeft animate__delay-0.5s " ><a href="STAFF.html"> <img src="./assets/especialidades_cardiologia_clinica.png" alt="imagen cardiología" width="120" height="120"> <br> <p>CARDIOLOGÍA</p></a></li>
+                <li class="l2 animate__animated animate__slideInLeft animate__delay-0.75s"><a href="STAFF.html"> <img src="./assets/especialidades_cirugia_general.png" alt="imagen cirugia" width="120" height="120"> <br> <p>CIRUGÍA</p></a></li>
+                <li class="l3 animate__animated animate__slideInLeft animate__delay-1s"><a href="STAFF.html"> <img src="./assets/especialidades_endocrinologia.png" alt="imagen endocrinología" width="120" height="120"> <br><p>ENDOCRINOLOGIA</p></a></li>
+                <li class="l4 animate__animated animate__slideInRight animate__delay-1s"><a href="STAFF.html"> <img src="./assets/especialidades_ginecologia.png" alt="imagen ginecología" width="120" height="120"><br><p>GINECOLOGÍA</b></p></a></li>
+                <li class="l5 animate__animated animate__slideInRight animate__delay-0.75s"><a href="STAFF.html"> <img src="./assets/especialidades_nutricion.png" alt="imagen nutricion" width="120" height="120"> <br><p>NUTRICIÓN</p></a></li>
+                <li class="l6 animate__animated animate__slideInRight animate__delay-0.5s"><a href="STAFF.html"> <img src="./assets/especialidades_psicologia.png" alt="imagen psicología" width="120" height="120"> <br><p>PSICOLOGÍA</p></a></li>
             </ul>
         </section> 
    
