--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>IMA</title>
 </head>
 <body class="contenedor">
@@ -30,14 +31,14 @@
       <!--inicio cuerpo principal-->
     <main class="cuerpoprincipal">
             <section class="contenido1 ">
-                 <h2 class="titulosseccion">¿Quiénes somos?</h2><br>
+                 <h2 class="titulosseccion   animate__animated animate__zoomIn animate__delay-1s">¿Quiénes somos?</h2><br>
                  <br>
-                 <p class="texto"> Somos un grupo de profesionales comprometidos con el bienestar de la salud, enfocados en la atención y prevención de la salud de nuestros pacientes, adoptando las mejores prácticas y técnicas sanitarias. Garantizando una prestanción de la más alta calidad. </p>
+                 <p class="texto   animate__animated animate__zoomIn animate__delay-2s"> Somos un grupo de profesionales comprometidos con el bienestar de la salud, enfocados en la atención y prevención de la salud de nuestros pacientes, adoptando las mejores prácticas y técnicas sanitarias. Garantizando una prestanción de la más alta calidad. </p>
             </section>
             <aside class="contenido2">
-                 <h2 class="titulosseccion">Conózcanos</h2><br>
+                 <h2 class="titulosseccion    animate__animated animate__zoomIn animate__delay-2,5s ">Conózcanos</h2><br>
                  <br>
-                 <p class="texto">Lo invitamos a visitar nuestras instalaciones y recuerde que su consulta no nos molesta.</p>
+                 <p class="texto   animate__animated animate__zoomIn animate__delay-3s">Lo invitamos a visitar nuestras instalaciones y recuerde que su consulta no nos molesta.</p>
             </aside>    
     </main>
     <footer class="footer"> <!--pie de página-->
