--- a/staff.html
+++ b/staff.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>IMA</title>
 </head>
 <body class="contenedor">
@@ -32,13 +33,12 @@
         <section class="seccionprincipal">
             <h2 class="encabezados">Contamos con profesionales altamente capacitados y formados en las instituciones más prestigiosas del país</h2>
             <ul class="listas">
-                <li class="ls1"> <h2><b>CARDIOLOGÍA</b></h2><br> <img src="./assets/CARDIOGIRL.png" alt="imagen cardiologa" width="90" height="84"><h3>Dra.Estefanía Biancotti</h3><br> <img src="./assets/CARDIOBOY.png" alt="imagen cardiologo" width="90" height="84"><h3>Dr.Juan Carlos Biancotti</h3><br> </li>
-                <li class="ls2"> <h2><b>CIRUGÍA</b></h2><br> <img src="./assets/CIRUJANO.png" alt="imagen cirujano" width="90" height="84"><h3>Dr.Rodolfo Carrillo</h3></li> 
-                <li class="ls3"> <h2><b>ENDOCRINOLOGIA</b></h2><br> <img src="./assets/ENDOCRINOLOGIA.png" alt="imagen endocrinologa" width="90" height="84"><h3>Dra.Lea Juarez Allen</h3></li> 
-                <li class="ls4"> <h2><b>GINECOLOGÍA</b></h2><br> <img src="./assets/GINECO.png" alt="imagen ginecología" width="90" height="84"><h3>Dra.Guillermina Barletta</h3></li> 
-                <li class="ls5"> <h2><b>NUTRICIÓN</b></h2><br> <img src="./assets/nutricion.png" alt="imagen nutricionista" width="90" height="84"><h3>Lic.Cinthya Rocha</h3></li> 
-                <li class="ls6"> <h2><b>PSICOLOGÍA</b></h2><br> <img src="./assets/PSICOL.png" alt="imagen psicologa" width="90" height="84"><h3>Lic.Eugenia Biancotti</h3></li> 
-            </ul>
+                <li class="ls1 animate__animated animate__slideInLeft animate__delay-1s"> <h2><b>CARDIOLOGÍA</b></h2><br> <img src="./assets/CARDIOGIRL.png" alt="imagen cardiologa" width="90" height="84"><h3>Dra.Estefanía Biancotti</h3><br> <img src="./assets/CARDIOBOY.png" alt="imagen cardiologo" width="90" height="84"><h3>Dr.Juan Carlos Biancotti</h3><br> </li>
+                <li class="ls2 animate__animated animate__slideInLeft animate__delay-0.75s"> <h2><b>CIRUGÍA</b></h2><br> <img src="./assets/CIRUJANO.png" alt="imagen cirujano" width="90" height="84"><h3>Dr.Rodolfo Carrillo</h3></li> 
+                <li class="ls3 animate__animated animate__slideInLeft animate__delay-0.5s"> <h2><b>ENDOCRINOLOGIA</b></h2><br> <img src="./assets/ENDOCRINOLOGIA.png" alt="imagen endocrinologa" width="90" height="84"><h3>Dra.Lea Juarez Allen</h3></li> 
+                <li class="ls4 animate__animated animate__slideInRight animate__delay-1s"> <h2><b>GINECOLOGÍA</b></h2><br> <img src="./assets/GINECO.png" alt="imagen ginecología" width="90" height="84"><h3>Dra.Guillermina Barletta</h3></li> 
+                <li class="ls5 animate__animated animate__slideInRight animate__delay-0.75s"> <h2><b>NUTRICIÓN</b></h2><br> <img src="./assets/nutricion.png" alt="imagen nutricionista" width="90" height="84"><h3>Lic.Cinthya Rocha</h3></li> 
+                <li class="ls6 animate__animated animate__slideInRight animate__delay-0.5s"> <h2><b>PSICOLOGÍA</b></h2><br> <img src="./assets/PSICOL.png" alt="imagen psicologa" width="90" height="84"><h3>Lic.Eugenia Biancotti</h3></li> 
          </section>
     </main>
     <footer class="footer"> <!--pie de página-->
