--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css estilos/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">     
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
     <title>IMA</title>
 </head>
@@ -31,7 +32,7 @@
         <!--inicio cuerpo principal-->
         <section class="contacto">
            <h2 class="encabezados">Complete el siguiente formulario y a la brevedad nos contactaremos con usted</h2>
-           <form class="formulariodecontacto" action="https//ima.com/contacto.php" method="get">
+           <form class="formulariodecontacto animate__animated animate__rotateInDownRight animate__slower	3s" action="https//ima.com/contacto.php" method="get">
                <label for="Nombre">NOMBRE Y APELLIDO</label>
                <br>
                <input type="text" id="NOMBRE Y APELLIDO" placeholder="Ingresa tu nombre">
