--- a/tipss.html
+++ b/tipss.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>IMA</title>
 </head>
 <body class="contenedor">
