--- a/especialidades.html
+++ b/especialidades.html
@@ -10,35 +10,107 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">   
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>IMA</title>
 </head>
-<body class="container">
+<body class="contenedor">
     <!--inicio de header-->
-    <header class="header">
-        <img class="header__logo" src="./assets/Logo- sin fondo-IMA-01.png"width="88" height="89"alt=" logo de ima">
-        <nav class="nav"> 
-            <ul class="nav__enlaces">
-                <li><a href="index.html">HOME</a>
-                <li><a href="#">ESPECIALIDADES</a>
-                <li><a href="staff.html">STAFF</a>
-                <li><a href="tipss.html">TIPS-S</a>
-                <li><a href="contacto.html">CONTACTO</a></li> 
-            </ul>
-        </nav>
-        <h1 class="header__h1">"Te presentamos nuestras áreas de salud"</h1>
-        <audio class="audiojazz" src="./assets/night-jazz-beats-10039.mp3" controls autoplay loop></audio> 
+<header class="header"> 
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <img src="./assets/Logo- sin fondo-IMA-01.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/index.html">HOME</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">ESPECIALIDADES</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/staff.html">STAFF</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/tipss.html">TIPSS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/contacto.html">CONTACTO</a>
+                      </li>
+                    </ul>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+    
+            <h1 class="header__h1"> "Te presentamos nuestras áreas de salud"</h1>
+            <audio class="audiojazz" src="./assets/night-jazz-beats-10039.mp3" controls autoplay loop></audio>
     </header>
     <main class="cuerpoprincipal">
         <!--inicio cuerpo principal-->
-        <section class="especialidades">
-            <ul class="especialidades__lista" >
-                <li class="l1 animate__animated animate__slideInLeft animate__delay-0.5s " ><a href="STAFF.html"> <img src="./assets/especialidades_cardiologia_clinica.png" alt="imagen cardiología" width="120" height="120"> <br> <p>CARDIOLOGÍA</p></a></li>
-                <li class="l2 animate__animated animate__slideInLeft animate__delay-0.75s"><a href="STAFF.html"> <img src="./assets/especialidades_cirugia_general.png" alt="imagen cirugia" width="120" height="120"> <br> <p>CIRUGÍA</p></a></li>
-                <li class="l3 animate__animated animate__slideInLeft animate__delay-1s"><a href="STAFF.html"> <img src="./assets/especialidades_endocrinologia.png" alt="imagen endocrinología" width="120" height="120"> <br><p>ENDOCRINOLOGIA</p></a></li>
-                <li class="l4 animate__animated animate__slideInRight animate__delay-1s"><a href="STAFF.html"> <img src="./assets/especialidades_ginecologia.png" alt="imagen ginecología" width="120" height="120"><br><p>GINECOLOGÍA</b></p></a></li>
-                <li class="l5 animate__animated animate__slideInRight animate__delay-0.75s"><a href="STAFF.html"> <img src="./assets/especialidades_nutricion.png" alt="imagen nutricion" width="120" height="120"> <br><p>NUTRICIÓN</p></a></li>
-                <li class="l6 animate__animated animate__slideInRight animate__delay-0.5s"><a href="STAFF.html"> <img src="./assets/especialidades_psicologia.png" alt="imagen psicología" width="120" height="120"> <br><p>PSICOLOGÍA</p></a></li>
-            </ul>
+        <section class="especi">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/especialidades_cardiologia_clinica.png" class="d-block w-100" alt="cardiologia">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>CARDIOLOGÍA</h5>
+                  <p>Realizamos todas las prácticas preventivas y reparativas</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/especialidades_cirugia_general.png" class="d-block w-100" alt="CIRUGIA">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>CIRUGÍA</h5>
+                  <p>Cirugía estética y reparadora</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/especialidades_endocrinologia.png" class="d-block w-100" alt="ENDOCRINOLOGÍA">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>ENDOCRINOLOGÍA</h5>
+                  <p>Todas lás prácticas en un solo lugar</p>
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/especialidades_ginecologia.png" class="d-block w-100" alt="GINECOLOGÍA">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>GINECOLOGÍA</h5>
+                    <p>Todas lás prácticas preventivas</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/especialidades_nutricion.png" class="d-block w-100" alt="NUTRICIÓN">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>NUTRICIÓN</h5>
+                    <p>Nutrición deportiva y nutrigenómica</p>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/especialidades_psicologia.png" class="d-block w-100" alt="PSICOLOGÍA">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>PSICOLOGÍA</h5>
+                      <p>Terapia cognitiva y conductual</p>
+                    </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </section> 
    
     </main>
@@ -83,6 +155,7 @@
                </ul>
             </div>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
