--- a/staff.html
+++ b/staff.html
@@ -10,23 +10,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">      
     <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>IMA</title>
 </head>
 <body class="contenedor">
     <!--inicio header-->
     <header class="header">
-        <img class="header__logo" src="./assets/Logo- sin fondo-IMA-01.png"width="88" height="89"alt=" logo de ima">
-        <nav class="nav"> 
-            <ul class="nav__enlaces">
-                <li><a href="index.html">HOME</a>
-                <li><a href="especialidades.html">ESPECIALIDADES</a>
-                <li><a href="#">STAFF</a>
-                <li><a href="tipss.html">TIPS-S</a>
-                <li><a href="contacto.html">CONTACTO</a></li> 
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <img src="./assets/Logo- sin fondo-IMA-01.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/index.html">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/especialidades.html">ESPECIALIDADES</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">STAFF</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/tipss.html">TIPSS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/contacto.html">CONTACTO</a>
+                  </li>
+                </ul>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
         <h1 class="header__h1"> "Nuestros profesionales"</h1>
-        <audio class="audiojazz" src="./assets/night-jazz-beats-10039.mp3" controls autoplay loop></audio> 
+        <audio class="audiojazz" src="./assets/night-jazz-beats-10039.mp3" controls autoplay loop></audio>
     </header>
     <!--inicio cuerpo principal-->
     <main class="cuerpoprincipal">
@@ -82,6 +103,7 @@
                </ul>
             </div>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  
 </body>
 </html>
