--- a/contacto.html
+++ b/contacto.html
@@ -13,46 +13,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>IMA</title>
 </head>
-<body class="contenedor">
-    <!--inicio header-->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <img src="./assets/Logo- sin fondo-IMA-01.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/index.html">HOME</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/especialidades.html">ESPECIALIDADES</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/staff.html">STAFF</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/tipss.html">TIPSS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACTO</a>
-                  </li>
-                </ul>
-                </ul>
-              </div>
-            </div>
-          </nav>
-
-        <h1 class="header__h1"> "Contactate con nosotros"</h1>
-        <audio class="audiojazz" src="./assets/night-jazz-beats-10039.mp3" controls autoplay loop></audio>
-    </header>
-    <main class="cuerpoprincipal" >
-        <!--inicio cuerpo principal-->
+<body id="body" class="container-fluid m-0 p-0">
+  <!--inicio de encabezado-->
+  <header>
+  <div class="container-fluid">
+  <div class="row">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fs-6">
+    <div class="container-fluid">
+      <img src="./assets/Logo- sin fondo-IMA-01.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ESPECIALIDADES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/staff.html">STAFF</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tipss.html">TIPSS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contacto.html">CONTACTO</a>
+          </li>
+        </ul>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
+<!--encabezado del header-->
+<div class="row text-center">
+  <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">Complete el siguiente formulario y a la brevedad nos contactaremos con usted</h1>
+</div>
+</div>
+</div>
+</header>
+<!--inicio del cuerpo prinicipal-->
+<main id="mainindex" class="container-fluid" >
         <section class="contacto">
-           <h2 class="encabezados">Complete el siguiente formulario y a la brevedad nos contactaremos con usted</h2>
            <form class="formulariodecontacto animate__animated animate__rotateInDownRight animate__slower	3s" action="https//ima.com/contacto.php" method="get">
                <label for="Nombre">NOMBRE Y APELLIDO</label>
                <br>
@@ -76,47 +81,41 @@
        </section>
    </main>
          <!--fin del cuerpo principal-->
-    <footer class="footer"> <!--pie de página-->
-            <!--googlemap de ima-->
-            <div class="footer__mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13247.691234978189!2d-61.1002304!3d-33.8916418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d99522855e5c4bf!2sIMA!5e0!3m2!1ses!2sar!4v1641935863680!5m2!1ses!2sar" style="border:0;" allowfullscreen="" height="120" loading="lazy"></iframe>
-            </div>
-            <!--tabla de datos informativos-->
-            <div class="footer__tabla">
-                <table >
-                    <tr>
-                        <td>HORARIOS:</td>
-                        <td>LUNES A VIERNES DE 08:00 A 20:00</td>
-                    </tr>
-                    <tr>
-                        <td>DIRECCIÓN:</td>
-                        <td>20 N°605 - COLÓN (BS.AS)<td>
-                    </tr>
-                    <tr>
-                        <td>TELÉFONO:</td>
-                        <td>02473-430185</td>
-                    </tr>
-                    <tr>
-                        <td>TURNOS:</td>
-                        <td>2473409030</td>
-                    </tr>
-                    <tr>
-                        <td>EMAIL:</td>
-                        <td>institutomedicoasistencial@gmail.com</td>
-                    </tr>
-               </table>
-            </div>
-            <!--empieza redes sociales-->
-            <div class="redessociales">
-               <ul class="redessociales__enlaces">
-                    <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp" width="70" height="61"></a></li>
-                    <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img src="./assets/envelopemail.png" alt="logo mail" width="70" height="61"></a></li>
-                    <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png" alt="logo instagram" width="70" height="61"> </a></li>
-                    <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png" alt="logo facebook" width="70"  height="61"></a></li>
-                    <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter" width="70" height="61"></a></li>
-               </ul>
-            </div>
-    </footer>
+ 
+<!-- Footer -->
+<footer id="footermain" class="bg-transparent text-center">
+  <!--mapa del footer-->
+  <div class="container-fluid row align-items-center justify-content-center ">
+     <div class="col-l-8 col-md-6 ">
+         <iframe id="mapa"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13247.691234978189!2d-61.1002304!3d-33.8916418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d99522855e5c4bf!2sIMA!5e0!3m2!1ses!2sar!4v1641935863680!5m2!1ses!2sar" style="border:0;" allowfullscreen="" height="auto" loading="lazy"></iframe>
+       </div>
+      <div id="datoscontacto" class="col-l-4 col-md-6">
+        <!--tabla de datos-->
+        <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
+          Contacto
+        </h6>
+        <p> Calle 20 N°Colón (Bs.As)</p>
+        <p>Horario:L A V 08:00 a 20:00</p>
+        <p>institutomedicoasistencial@gmail.com</p>
+        <p>TURNOS:2473409030</p>
+      </div>
+      <!--redes sociales-->
+      <div class="row">
+        <ul class="redessociales__enlaces">
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp" width="30" height="30"></a></li>
+          <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img src="./assets/envelopemail.png" alt="logo mail" width="30" height="30"></a></li>
+          <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png" alt="logo instagram" width="30" height="30"> </a></li>
+          <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png" alt="logo facebook" width="30"  height="30"></a></li>
+          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter" width="30" height="30"></a></li>
+        </ul>
+      </div>
+    </div> 
+  <!-- Copyright -->
+  <div class="text-center bg-transparent fs-6">
+    © 2022 Copyright:IMA SALUD
+  </div>
+</footer>
+<!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    
 
