--- a/especialidades.html
+++ b/especialidades.html
@@ -28,19 +28,19 @@
         <ul class="navbar-nav ms-auto">
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">HOME</a>
+            <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">ESPECIALIDADES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/staff.html">STAFF</a>
+            <a class="nav-link" href="staff.html">STAFF</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/tipss.html">TIPSS</a>
+            <a class="nav-link" href="tipss.html">TIPSS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacto.html">CONTACTO</a>
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
           </li>
         </ul>
         </ul>
