--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <a class="nav-link" href="#">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/especialidades.html">ESPECIALIDADES</a>
+            <a class="nav-link" href="especialidades.html">ESPECIALIDADES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/staff.html">STAFF</a>
+            <a class="nav-link" href="staff.html">STAFF</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/tipss.html">TIPSS</a>
+            <a class="nav-link" href="tipss.html">TIPSS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacto.html">CONTACTO</a>
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
           </li>
         </ul>
         </ul>
