--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>IMA</title>
 </head>
-<body id="body" class="container-fluid m-0 p-0">
+<body class=" body container-fluid m-0 p-0">
   <!--inicio de encabezado-->
   <header>
   <div class="container-fluid">
   <div class="row">
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent fs-6">
-    <div class="container-fluid">
-      <img src="./assets/Logo- sin fondo-IMA-01.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+    <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
+     <div class="container-fluid">
+      <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima"  class="header__nav__logo d-inline-block align-text-top">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,16 +31,16 @@
             <a class="nav-link" href="#">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/especialidades.html">ESPECIALIDADES</a>
+            <a class="nav-link" href="especialidades.html">ESPECIALIDADES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/staff.html">STAFF</a>
+            <a class="nav-link" href="staff.html">STAFF</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/tipss.html">TIPSS</a>
+            <a class="nav-link" href="tipss.html">TIPSS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacto.html">CONTACTO</a>
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
           </li>
         </ul>
         </ul>
@@ -56,26 +56,26 @@
 </div>
 </header>
 <!--inicio del cuerpo prinicipal-->
-<main id="mainindex" class="container-fluid" >
+<main class="container-fluid" >
   <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-inner container-fluid">
-      <div class="carousel-item active container-fluid" data-bs-interval="5000" >
-        <img id="imagenlogo"src="./assets/Logo- sin fondo-IMA-01.png"  class="d-block w-100" height="900px" alt="logo">
+      <div class="carousel-item active container-fluid" data-bs-interval="2000" >
+        <img src="./assets/Logo- sin fondo-IMA-01.png"  class="carousel-inner__imagenes d-block w-100" alt="logo">
         <div class="carousel-caption d-block">
         </div>
       </div>
       <div class="carousel-item container-fluid" data-bs-interval="3000">
-        <img id="imagenconsultorio" src="./assets/administración consultorio-1.png"  class="d-block w-100" height="900px" alt="consultorio">
+        <img src="./assets/administración consultorio-1.png"  class="carousel-inner__imagenes d-block w-100" alt="consultorio">
         <div class="carousel-caption d-block">
-          <h2 id="encabezadoslabel1" class="row justify-content-center align-item-center animate__animated animate__slideInLeft animate__delay-0.75s">¿Quiénes somos?</h2>
-          <p class="texto "> Somos un grupo de profesionales comprometidos con el bienestar de la salud, enfocados en la atención y prevención de la salud de nuestros pacientes, adoptando las mejores prácticas y técnicas sanitarias. Garantizando una prestanción de la más alta calidad</p>
+          <h2 id="carousel-inner__encabezado" class="row justify-content-center align-item-center animate__animated animate__slideInLeft animate__delay-0.75s">¿Quiénes somos?</h2>
+          <p class="carousel-inner__texto "> Somos un grupo de profesionales comprometidos con el bienestar de la salud, enfocados en la atención y prevención de la salud de nuestros pacientes, adoptando las mejores prácticas y técnicas sanitarias. Garantizando una prestanción de la más alta calidad</p>
         </div>
       </div>
       <div class="carousel-item container-fluid " data-bs-interval="2000">
-        <img id="frenteima" src="./assets/frente consultorio.jpg"  class="d-block w-100" height="900px" alt="frente de ima">
+        <img src="./assets/frente consultorio.jpg"  class="d-block w-100 carousel-inner__imagenes" alt="frente de ima">
         <div class="carousel-caption d-block">
-          <h2 id="encabezadoslabel2" class="row justify-content-center align-item-center"> Visítenos</h2>
-          <p class="texto2"> Lo invitamos a conocer nuestras instalaciones, y recuerde que su consulta no molesta</p>
+          <h2 id="carousel-inner__encabezado2" class="row justify-content-center align-item-center"> Visítenos</h2>
+          <p class="carousel-inner__texto2"> Lo invitamos a conocer nuestras instalaciones, y recuerde que su consulta no molesta</p>
         </div>
       </div>
     </div>
@@ -83,13 +83,13 @@
 </main>
 
 <!-- Footer -->
-<footer id="footermain" class="bg-transparent text-center">
+<footer class="footer bg-transparent text-center">
   <!--mapa del footer-->
   <div class="container-fluid row align-items-center justify-content-center ">
      <div class="col-l-8 col-md-6 ">
-         <iframe id="mapa"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13247.691234978189!2d-61.1002304!3d-33.8916418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d99522855e5c4bf!2sIMA!5e0!3m2!1ses!2sar!4v1641935863680!5m2!1ses!2sar" style="border:0;" allowfullscreen="" height="auto" loading="lazy"></iframe>
-       </div>
-      <div id="datoscontacto" class="col-l-4 col-md-6">
+         <iframe class="footer__mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13247.691234978189!2d-61.1002304!3d-33.8916418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d99522855e5c4bf!2sIMA!5e0!3m2!1ses!2sar!4v1641935863680!5m2!1ses!2sar" style="border:0;" allowfullscreen="" height="auto" loading="lazy"></iframe>
+      </div>
+    <div class="footer__datoscontacto col-l-4 col-md-6">
         <!--tabla de datos-->
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
@@ -98,20 +98,20 @@
         <p>Horario:L A V 08:00 a 20:00</p>
         <p>institutomedicoasistencial@gmail.com</p>
         <p>TURNOS:2473409030</p>
-      </div>
+    </div>
       <!--redes sociales-->
       <div class="row">
-        <ul class="redessociales__enlaces">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp" width="30" height="30"></a></li>
-          <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img src="./assets/envelopemail.png" alt="logo mail" width="30" height="30"></a></li>
-          <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png" alt="logo instagram" width="30" height="30"> </a></li>
-          <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png" alt="logo facebook" width="30"  height="30"></a></li>
-          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter" width="30" height="30"></a></li>
+        <ul class="redessociales">
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes"></a></li>
+          <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img src="./assets/envelopemail.png" alt="logo mail "class="redessociales__imagenes" ></a></li>
+          <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png" alt="logo instagram" class="redessociales__imagenes"> </a></li>
+          <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png" alt="logo facebook"class="redessociales__imagenes" ></a></li>
+          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter" class="redessociales__imagenes"></a></li>
         </ul>
       </div>
     </div> 
   <!-- Copyright -->
-  <div class="text-center bg-transparent fs-6">
+  <div class="footer__copyright text-center bg-transparent ">
     © 2022 Copyright:IMA SALUD
   </div>
 </footer>
